# multipaint_by_numbers

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  default.nix  flake.nix
.github/workflows/: ci.yaml
nix/: default.nix
src/: http.rs  main.rs  ssh.rs
src/nonogram/: mod.rs  nonogrammed.rs
